--- a/Week12-AnuragBhatnagar-ShiftAltCap-Lecture.qmd
+++ b/Week12-AnuragBhatnagar-ShiftAltCap-Lecture.qmd
@@ -4,7 +4,7 @@ format html:
 ---
 **This presentation for internal viewing and referencing only. Redistribution of the presentation is not permitted.**
 
-Bhatnagar, Anurag (2025, April 09). Innovation @ IOT + Human Behaviour+Finance MAE6291: Internet of Things for Engineers. Department of Mechanical and Aerospace Engineering, The George Washington University.[https://gwu-mae6291-iot.github.io/spring2025/](https://gwu-mae6291-iot.github.io/spring2025/)
+Bhatnagar, Anurag (2025, April 09). Innovation @ IOT + Human Behaviour + Finance, MAE6291: Internet of Things for Engineers. Department of Mechanical and Aerospace Engineering, The George Washington University.[https://gwu-mae6291-iot.github.io/spring2025/](https://gwu-mae6291-iot.github.io/spring2025/)
 
 ## Presentation slide deck
 ::: {.callout-note appearance="simple"}
